final word-up with high score

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
 
         <!-- things that should not show up until the (first) game has started -->
         <section id="game">
+            <h3 id="final-score"></h3>
 
-            <p>Spell as many words as you can, using only these letters:</p>
+            <p id="instructions">Spell as many words as you can, using only these letters:</p>
 
             <!-- Make an empty container to hold the letter chips.-->
             <div id="allowed-letters"></div>
@@ -53,6 +54,7 @@
             <div id="word-submissions">
                 <!-- word submission chips will be injected here -->
             </div>
+            <h2 id="high-score"></h2>
         </section>
     </main>
 
